# 3d-hand-scanner

./: .gitignore  CMakeLists.txt  README.md  locate_keypoints.cpp  opencv_test.cpp  reconstruct.cpp  sensor_width_camera_database.txt  template.ply
include/: system.h
openpose_user_code/: CMakeLists.txt  hand_from_image.cpp
src/: locate_keypoints.cpp  pipeline.cpp  system.cpp
